# SpotyRate

./: .env  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt
SpotyRate/: admin.py  apps.py  asgi.py  manager.py  models.py  settings.py  urls.py  wsgi.py
SpotyRate/migrations/: 0001_initial.py  0002_alter_media_media_type.py  0002_rename_user_spotifyuser.py  0003_remove_spotifyuser_created_at.py  0003_spotifyuser_groups_spotifyuser_is_active_and_more.py  0004_remove_spotifyuser_profile_image_url.py  0005_spotifyuser_profile_image_url.py  0006_alter_rating_media_rating_unique_user_media_rating.py
SpotyRate/templates/: base.html  dashboard.html  landing.html  logout.html
SpotyRate/templatetags/: duration_filters.py
SpotyRate/views/: __init__.py  auth.py  comments.py  media.py  page.py  playlist.py  sample.txt  search.py  spotify.py  track.py
features/: 1_login.feature  2_search.feature  3_media.feature  4_submmit_comment.feature  5_update_comment.feature  6_remove_comment.feature  environment.py  how_to_execute.txt  media.feature
features/steps/: 1_login_steps.py  2_search_steps.py  3_media_steps.py  4_submmit_comment.py  5_remove_comment.py  login.py
project/: settings.py  urls.py
static/css/: buttons.css  containers.css  headers.css  images.css  main.css  style.css  text.css
web/: admin.py  apps.py  models.py  urls.py  views.py
web/migrations/: 0001_initial.py  0002_spotifyuser_created_at_spotifyuser_email_and_more.py
web/static/: test.css
(+63 files in other folders)
