[project]
name = "spotyrate"
version = "0.1.0"
description = ""
authors = [
    {name = "Eric Bitria",email = "eric.bitria@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "requests (==2.32.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
